--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10667,6 +10667,90 @@ a.text-dark:focus {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
+.topbar {
+  min-height: 55px;
+  max-height: 55px;
+  z-index: 1030;
+  background: #009688;
+  padding: 0 20px 0 0;
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.topbar__logo {
+  transition: width 0.3s ease-in-out;
+  display: block;
+  float: left;
+  height: 50px;
+  font-size: 20px;
+  line-height: 50px;
+  text-align: center;
+  width: 230px;
+  padding: 0 15px;
+  font-weight: 300;
+  overflow: hidden;
+  color: #fff;
+}
+
+.topbar__logo:hover {
+  color: #fff;
+  text-decoration: none;
+  opacity: 0.7;
+}
+
+.topbar .navarea {
+  transition: margin-left 0.3s ease-in-out;
+  margin-bottom: 0;
+  margin-left: 230px;
+  border: none;
+  min-height: 50px;
+  border-radius: 0;
+  flex: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.topbar .navarea__actions {
+  display: flex;
+  align-items: center;
+  padding-right: 30px;
+  flex: 1;
+  min-width: 25%;
+  justify-content: flex-end;
+}
+
+.topbar .navarea__actions .nav_action {
+  padding: 0 10px;
+  color: #ffffff;
+}
+
+.topbar .navarea__actions .nav_action i {
+  color: #ffffff;
+  font-size: 28px;
+  position: relative;
+}
+
+.topbar .navarea__actions .nav_action i .notification_badge {
+  position: absolute;
+  left: 18px;
+  bottom: 14px;
+  padding: 2px 3.5px;
+  background-color: #fa3e3e;
+  border-radius: 2px;
+  color: #ffffff;
+  -webkit-background-clip: padding-box;
+  font: 12px "monospace", sans-serif;
+  text-decoration: none;
+}
+
+.topbar .navarea__actions .nav_user {
+  padding: 0 10px;
+  color: #ffffff;
+}
+
 html,
 body {
   height: 100%;
