--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10747,9 +10747,185 @@ a.text-dark:focus {
 }
 
 .topbar .navarea__actions .nav_user {
+  justify-content: center;
+  align-items: center;
   padding: 0 10px;
-  color: #ffffff;
+  position: relative;
+  min-width: 45px;
 }
+
+.topbar .navarea__actions .nav_user .user_avatar {
+  height: 40px;
+  width: 40px;
+  margin-right: 15px;
+  opacity: 0.7;
+  cursor: pointer;
+  border: 0.3px solid #979797;
+  border-radius: 50%;
+}
+
+.topbar .navarea__actions .nav_user .user_name {
+  color: rgba(255, 255, 255, 0.51);
+  font-size: 14px;
+  font-weight: 400;
+  cursor: pointer;
+}
+
+.topbar .navarea__actions .nav_user .user_content {
+  min-width: 300px;
+  position: absolute;
+  z-index: 650;
+  top: 55px;
+  right: 0;
+  display: flex;
+  background: #fff;
+  min-height: 150px;
+  border-radius: 3px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.topbar .navarea__actions .nav_user .user_content:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 30px;
+  width: 0;
+  height: 0;
+  border: 12px solid transparent;
+  border-bottom-color: #fff;
+  -webkit-filter: drop-shadow(0 -2px 0.02px rgba(0, 0, 0, 0.09));
+          filter: drop-shadow(0 -2px 0.02px rgba(0, 0, 0, 0.09));
+  border-top: 0;
+  margin-left: -10px;
+  margin-top: -10px;
+}
+
+.topbar .navarea__actions .nav_user .user_content__avatar {
+  padding: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #1f4037;
+  /* fallback for old browsers */
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #99f2c8, #1f4037);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.topbar .navarea__actions .nav_user .user_content__avatar img {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  border: 1px solid rgba(99, 99, 99, 0.4);
+  background: #fff;
+  opacity: 1;
+}
+
+.topbar .navarea__actions .nav_user .user_content__links {
+  display: flex;
+  flex-direction: column;
+  margin-left: 15px;
+  width: 100%;
+}
+
+.topbar .navarea__actions .nav_user .user_content__links .title {
+  padding: 10px 10px 10px 5px;
+  color: #056b5b;
+  font-weight: 700;
+  font-size: 18px;
+  width: 100%;
+  white-space: nowrap;
+}
+
+.topbar .navarea__actions .nav_user .user_content__links .links-items {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.topbar .navarea__actions .nav_user .user_content__links .links-items a {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 15px 5px;
+  text-decoration: none;
+  color: rgba(99, 99, 99, 0.84);
+  border-bottom: 1px solid #eeeeee;
+}
+
+.topbar .navarea__actions .nav_user .user_content__links .links-items a > span {
+  margin-right: 10px;
+}
+
+.topbar .navarea__actions .nav_user .user_content__links .links-items a:last-child {
+  border-bottom: none;
+}
+
+.topbar .navarea__actions .nav_user .user_content__links .links-items a:hover {
+  opacity: 0.4;
+  cursor: pointer;
+}
+
+.topbar .navarea__actions .nav_user__backdrop {
+  position: absolute;
+  z-index: 19;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  height: 100vh;
+  width: 100vw;
+  background: rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+
+.avatar_toggled {
+  min-height: 100vh;
+  min-width: 100vw;
+  background: rgba(0, 0, 0, 0.11);
+  position: absolute;
+  z-index: 600;
+  right: 0;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  cursor: pointer;
+  display: block;
+}
+
+@font-face {
+  font-family: "Material Icons";
+  font-style: normal;
+  font-weight: 400;
+  src: url(/fonts/vendor/material-icons/iconMaterialIcons-Regular.eot?96c476804d7a788cc1c05351b287ee41);
+  /* For IE6-8 */
+  src: local("Material Icons"), local("MaterialIcons-Regular"), url(/fonts/vendor/material-icons/iconMaterialIcons-Regular.woff2?0509ab09c1b0d2200a4135803c91d6ce) format("woff2"), url(/fonts/vendor/material-icons/iconMaterialIcons-Regular.woff?29b882f018fa6fe75fd338aaae6235b8) format("woff"), url(/fonts/vendor/material-icons/iconMaterialIcons-Regular.ttf?d120c85b6eb0549d60483e2980033c15) format("truetype");
+}
+
+.material-icons {
+  font-family: "Material Icons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+  /* Support for IE. */
+  -webkit-font-feature-settings: "liga";
+          font-feature-settings: "liga";
+}
+
+/* Sass map of icon names and codepoints */
 
 html,
 body {
