--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10775,8 +10775,8 @@ a.text-dark:focus {
   min-width: 300px;
   position: absolute;
   z-index: 650;
-  top: 55px;
-  right: 0;
+  top: 40px;
+  right: -10px;
   display: flex;
   background: #fff;
   min-height: 150px;
@@ -10877,6 +10877,151 @@ a.text-dark:focus {
   width: 100vw;
   background: rgba(0, 0, 0, 0.2);
   cursor: pointer;
+}
+
+.topbar .navarea__actions .nav_notifications {
+  display: flex;
+  align-items: center;
+  width: 50px;
+  position: relative;
+}
+
+.topbar .navarea__actions .nav_notifications a {
+  position: relative;
+}
+
+.topbar .navarea__actions .nav_notifications a i {
+  color: #fff;
+  font-size: 28px;
+  font-weight: 400;
+}
+
+.topbar .navarea__actions .nav_notifications a .notify_bubble {
+  border-radius: 20px;
+  border: 1px solid #FFF;
+  width: 20px;
+  height: 20px;
+  background-color: #de0e0e;
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  font-size: 10px;
+  line-height: 18px;
+  font-family: "Roboto", sans-serif;
+  color: #fff;
+  font-weight: 700;
+  text-align: center;
+}
+
+.topbar .navarea__actions .nav_notifications__content {
+  box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.2);
+  background-color: #ffffff;
+  min-width: 300px;
+  position: absolute;
+  top: 40px;
+  right: -20px;
+  width: 420px;
+  border-radius: 4px;
+  color: rgba(27, 29, 48, 0.5);
+  font-size: 12px;
+  -webkit-animation: fadeIn 0.4s forwards;
+          animation: fadeIn 0.4s forwards;
+  z-index: 250;
+}
+
+.topbar .navarea__actions .nav_notifications__content:before {
+  content: "";
+  position: absolute;
+  top: -6px;
+  right: 40px;
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid #FFF;
+}
+
+.topbar .navarea__actions .nav_notifications__content .notify_title {
+  border-bottom: 1px solid #EEEEEE;
+  height: 40px;
+  padding: 15px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #4d4f5c;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 12px;
+}
+
+.topbar .navarea__actions .nav_notifications__content .notify_messages {
+  min-height: 240px;
+  max-height: 340px;
+  overflow: auto;
+  border-radius: 0 0 4px 4px;
+}
+
+.topbar .navarea__actions .nav_notifications__content .notify_messages ul {
+  margin: 0;
+}
+
+.topbar .navarea__actions .nav_notifications__content .notify_messages ul .notify_message {
+  list-style: none;
+  background-color: #fafafa;
+  padding: 15px 30px;
+  border-bottom: 1px solid #f1f1f3;
+  cursor: pointer;
+}
+
+.topbar .navarea__actions .nav_notifications__content .notify_messages ul .notify_message__title {
+  font-weight: 400;
+  margin-bottom: 10px;
+}
+
+.topbar .navarea__actions .nav_notifications__content .notify_messages ul .notify_message__title.unread {
+  color: #4d4f5c;
+  font-weight: 700;
+}
+
+.topbar .navarea__actions .nav_notifications__content .notify_messages ul .notify_message__body {
+  color: #707070;
+  font-size: 12px;
+  line-height: 13px;
+  margin-bottom: 10px;
+}
+
+.topbar .navarea__actions .nav_notifications__content .notify_messages ul .notify_message__body.unread {
+  color: #707070;
+  font-weight: 700;
+  line-height: 13px;
+}
+
+.topbar .navarea__actions .nav_notifications__content .notify_messages ul .notify_message:hover {
+  opacity: 0.8;
+}
+
+.topbar .navarea__actions .nav_notifications__overlay {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.03);
+  z-index: 200;
+}
+
+@media screen and (max-width: 500px) {
+  .crims_notifications__content {
+    width: 300px;
+    right: -50px;
+  }
+
+  .crims_notifications__content:before {
+    right: 80px;
+  }
 }
 
 .avatar_toggled {
