--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10685,6 +10685,7 @@ a.text-dark:focus {
 
 .sidebar__navigation {
   flex: 1;
+  margin-top: 20px;
 }
 
 .sidebar__navigation .title {
@@ -10708,7 +10709,7 @@ a.text-dark:focus {
 }
 
 .sidebar__navigation ul li a {
-  padding: 11px 10px 11px 31px;
+  padding: 11px 10px 11px 15px;
   width: 100%;
   text-decoration: none;
   color: #b8c7ce;
@@ -10727,19 +10728,19 @@ a.text-dark:focus {
 .sidebar__navigation ul li a:hover {
   background-color: rgba(0, 0, 0, 0.09);
   border-left: 4px solid #417505;
-  padding-left: 27px;
+  padding-left: 11px;
 }
 
 .sidebar__navigation ul li a:focus {
   background-color: rgba(0, 0, 0, 0.09);
   border-left: 4px solid #417505;
-  padding-left: 27px;
+  padding-left: 11px;
 }
 
 .sidebar__navigation ul li a.active {
   background-color: rgba(0, 0, 0, 0.09);
   border-left: 4px solid #417505;
-  padding-left: 27px;
+  padding-left: 11px;
 }
 
 .sidebar__navigation ul li a span {
@@ -10798,7 +10799,7 @@ a.text-dark:focus {
 .sidebar__navigation ul li.has_dropdown.active a.menu_dropdown {
   background-color: rgba(0, 0, 0, 0.09);
   border-left: 4px solid #417505;
-  padding-left: 27px;
+  padding-left: 11px;
 }
 
 .sidebar__navigation ul li.has_dropdown.active a.menu_dropdown i.dropdown_caret {
