--- a/resources/sass/partials/sidebar/_sidebar.scss
+++ b/resources/sass/partials/sidebar/_sidebar.scss
@@ -18,6 +18,7 @@
 
     &__navigation {
         flex: 1;
+        margin-top: 20px;
 
         .title {
             text-transform: uppercase;
@@ -40,7 +41,7 @@
 
             li {
                 a {
-                    padding: 11px 10px 11px 31px;
+                    padding: 11px 10px 11px 15px;
                     width: 100%;
 
                     text-decoration: none;
@@ -62,19 +63,19 @@
                     &:hover {
                         background-color: rgba(0, 0, 0, 0.09);
                         border-left: 4px solid #417505;
-                        padding-left: 27px;
+                        padding-left: 11px;
                     }
 
                     &:focus {
                         background-color: rgba(0, 0, 0, 0.09);
                         border-left: 4px solid #417505;
-                        padding-left: 27px;
+                        padding-left: 11px;
                     }
 
                     &.active {
                         background-color: rgba(0, 0, 0, 0.09);
                         border-left: 4px solid #417505;
-                        padding-left: 27px;
+                        padding-left: 11px;
                     }
 
                     span {
@@ -157,7 +158,7 @@
 
                                 background-color: rgba(0, 0, 0, 0.09);
                                 border-left: 4px solid #417505;
-                                padding-left: 27px;
+                                padding-left: 11px;
                             }
                         }
 
