--- a/resources/sass/partials/topbar/_topbar.scss
+++ b/resources/sass/partials/topbar/_topbar.scss
@@ -12,9 +12,9 @@
     align-items: center;
 
     &__logo {
-        -webkit-transition: transform .3s ease-in-out,width .3s ease-in-out;
-        -moz-transition: transform .3s ease-in-out,width .3s ease-in-out;
-        transition: transform .3s ease-in-out,width .3s ease-in-out;
+        -webkit-transition: transform .3s ease-in-out, width .3s ease-in-out;
+        -moz-transition: transform .3s ease-in-out, width .3s ease-in-out;
+        transition: transform .3s ease-in-out, width .3s ease-in-out;
         display: block;
         float: left;
         height: 50px;
@@ -40,9 +40,9 @@
     }
 
     .navarea {
-        -webkit-transition: transform .3s ease-in-out,width .3s ease-in-out;
-        -moz-transition: transform .3s ease-in-out,width .3s ease-in-out;
-        transition: transform .3s ease-in-out,width .3s ease-in-out;
+        -webkit-transition: transform .3s ease-in-out, width .3s ease-in-out;
+        -moz-transition: transform .3s ease-in-out, width .3s ease-in-out;
+        transition: transform .3s ease-in-out, width .3s ease-in-out;
 
         margin-bottom: 0;
         border: none;
@@ -62,6 +62,7 @@
             justify-content: flex-start;
             align-items: center;
             height: 100%;
+
             i {
                 color: #fff;
                 font-size: 30px;
@@ -171,8 +172,8 @@
                         //flex-direction: column;
                         justify-content: center;
                         align-items: center;
-                        background: #1f4037;  /* fallback for old browsers */
-                        background: -webkit-linear-gradient(to right, #99f2c8, #1f4037);  /* Chrome 10-25, Safari 5.1-6 */
+                        background: #1f4037; /* fallback for old browsers */
+                        background: -webkit-linear-gradient(to right, #99f2c8, #1f4037); /* Chrome 10-25, Safari 5.1-6 */
                         background: linear-gradient(to right, #99f2c8, #1f4037); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 
@@ -258,8 +259,10 @@
                 //flex: 1;
                 width: 50px;
                 position: relative;
+
                 a {
                     position: relative;
+
                     i {
                         color: #fff;
                         font-size: 28px;
@@ -348,6 +351,7 @@
                                         color: #4d4f5c;
                                         font-weight: 700;
                                     }
+
                                     font-weight: 400;
                                     margin-bottom: 10px;
                                 }
@@ -358,6 +362,7 @@
                                         font-weight: 700;
                                         line-height: 13px;
                                     }
+
                                     color: #707070;
                                     font-size: 12px;
                                     line-height: 13px;
@@ -405,8 +410,7 @@
     }
 
 
-
-    @at-root  {
+    @at-root {
         .navigation_toggled {
             .topbar {
                 &__logo {
@@ -414,13 +418,74 @@
                     padding-left: 10px;
                     overflow: hidden;
                     opacity: 0;
+
                     .logo_item {
                         display: none;
                     }
                 }
+
                 .navarea {
                     width: calc(100%);
                     margin-left: -15px;
+                }
+            }
+        }
+
+        @media screen and (max-width: 1024px) {
+            .topbar {
+                &__logo {
+                    width: 0px;
+                    padding-left: 10px;
+                    overflow: hidden;
+                    opacity: 0;
+
+                    .logo_item {
+                        display: none;
+                    }
+                }
+
+                .navarea {
+                    width: calc(100%);
+                    margin-left: -15px;
+                }
+            }
+        }
+
+        @media screen and (max-width: 500px) {
+            .topbar {
+                .navarea {
+                    &__actions {
+                        .nav_notifications {
+                            &__content {
+                                width: 320px;
+                                right: -118px;
+
+                                &:before {
+                                    right: 134px;
+                                }
+                            }
+                        }
+
+                    }
+                }
+            }
+
+        }
+
+        @media screen and (max-width: 340px) {
+            .topbar {
+                .navarea {
+                    &__actions {
+                        .nav_user {
+                            .user_content {
+                                right: -32px;
+
+                                &:after {
+                                    right: 54px;
+                                }
+                            }
+                        }
+                    }
                 }
             }
         }
