--- a/resources/sass/partials/sidebar/_sidebar.scss
+++ b/resources/sass/partials/sidebar/_sidebar.scss
@@ -93,7 +93,7 @@
 
             color: #9b9b9b;
             background-color: rgba(0, 0, 0, 0.09);
-            padding: 10px 10px 10px 30px;
+            padding: 10px 10px 10px 15px;
             line-height: 23px;
 
         }
@@ -105,6 +105,7 @@
             padding-inline-start: 0;
 
             li {
+                //margin-bottom: 10px;
                 a {
                     padding: 11px 10px 11px 15px;
                     width: 100%;
