--- a/resources/sass/partials/sidebar/_sidebar.scss
+++ b/resources/sass/partials/sidebar/_sidebar.scss
@@ -128,19 +128,19 @@
 
                     &:hover {
                         background-color: rgba(0, 0, 0, 0.09);
-                        border-left: 4px solid #417505;
+                        border-left: 4px solid #00a65a;
                         padding-left: 11px;
                     }
 
                     &:focus {
                         background-color: rgba(0, 0, 0, 0.09);
-                        border-left: 4px solid #417505;
+                        border-left: 4px solid #00a65a;
                         padding-left: 11px;
                     }
 
                     &.active {
                         background-color: rgba(0, 0, 0, 0.09);
-                        border-left: 4px solid #417505;
+                        border-left: 4px solid #00a65a;
                         padding-left: 11px;
                     }
 
@@ -223,7 +223,7 @@
                                 }
 
                                 background-color: rgba(0, 0, 0, 0.09);
-                                border-left: 4px solid #417505;
+                                border-left: 4px solid #00a65a;
                                 padding-left: 11px;
                             }
                         }
